--- a/arkedge/src/app/home/home.component.scss
+++ b/arkedge/src/app/home/home.component.scss
@@ -337,3 +337,22 @@ $purple:#787fc2;
 		}
 	}
 }
+
+// @media (min-width: 576px){
+// 	.section-projects{
+// 	.project-grid{
+// 		li{
+// 			width:100%;
+// 			figure{
+// 				margin:0 0 15px;
+// 			}
+// 			&:first-child{
+// 				width:100%;
+// 			figure{
+// 				margin:0 0 15px;
+// 			}
+// 			}
+// 		}
+// 	}
+// }
+// }
