--- a/thd/scss/main.scss
+++ b/thd/scss/main.scss
@@ -154,7 +154,9 @@ ul.list {
 		top: 0;
 		left: 0;
 		height: 100%;
-		width: 100%;}
+		width: 100%;
+		img{
+		width:100%;}}
 	.navigator-banner{
 		position: absolute;;
 		right:0;
