--- a/thd/css/main.css
+++ b/thd/css/main.css
@@ -162,10 +162,10 @@ ul.list {
     z-index: 1; }
   .main-banner .container {
     position: relative;
-    height: 500px;
+    height: 550px;
     overflow: hidden; }
   .main-banner .carousel-item .carousel-caption {
-    top: 75%;
+    top: 80%;
     left: -100%;
     z-index: 10;
     color: #fff;
@@ -240,12 +240,10 @@ ul.list {
     width: 100%; }
   img {
     width: 100%; }
+  #myCarousel {
+    display: none; }
   .picsum-img-wrapper img {
-    width: auto; } 
-#myCarousel{
-  display:none;
-  }
-}
+    width: auto; } }
 
 /* Navigation */
 #slideNav {
