--- a/bw/css/main.css
+++ b/bw/css/main.css
@@ -37,38 +37,62 @@ svg:not(:root) {
     background: #ce3a07; }
 
 h1 {
-  color: #e7430a;
-  margin-bottom: 50px; }
+  color: #000;
+  margin: 50px 0; }
 
-.service-view .card {
-  border-radius: 10px;
-  overflow: hidden; }
-
-.service-view .card-body {
+ul {
   padding: 0px; }
-  .service-view .card-body .card-title, .service-view .card-body .card-text {
-    padding: 15px; }
-  .service-view .card-body .card-title {
-    border-top: 5px solid #e7430a;
+
+li {
+  list-style-type: none; }
+
+.bw-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0; }
+  .bw-header .logo img {
+    width: 50%; }
+
+.navbar-inverse {
+  background: #da5004;
+  border: none;
+  margin: 0; }
+  .navbar-inverse .navbar-nav {
+    float: none;
+    display: table;
+    margin: 0 auto; }
+    .navbar-inverse .navbar-nav li a {
+      color: #fff;
+      text-shadow: none; }
+
+.lable-strip {
+  background: #da5004; }
+  .lable-strip h5 {
+    color: #fff;
+    font-weight: bold;
+    text-align: center; }
+
+.services-info {
+  margin: 50px 0; }
+  .services-info .circle {
+    overflow: hidden;
+    border-radius: 50%; }
+  .services-info .title-heading {
     text-align: center;
-    font-size: 28px;
-    margin-bottom: 0px;
-    background: #fafafa; }
+    font-size: 30px;
+    font-weight: bold; }
 
-.wt-mg-section {
-  background: #f7f7f7; }
+.our-achiememnts img {
+  width: 100%; }
 
-.wt-mg .heading {
-  display: block;
-  font-weight: bold;
-  font-size: 37px;
-  margin-bottom: 15px;
-  line-height: 40px; }
-
-.wt-mg img {
-  width: auto;
-  margin-left: 20px;
-  margin-bottom: 20px; }
+.our-achiememnts .col {
+  background: #f8f7f7;
+  margin: 0px;
+  padding: 0px; }
+  .our-achiememnts .col:nth-child(2), .our-achiememnts .col:nth-child(4), .our-achiememnts .col:nth-child(6) {
+    border-left: 5px solid #e7430a;
+    padding: 25px; }
 
 ul.list {
   margin-top: 35px;
@@ -113,124 +137,43 @@ ul.list {
     color: #333333;
     text-decoration: none; }
 
-.main-banner {
-  border-top: 5px solid #e7430a; }
-  .main-banner .picsum-img-wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%; }
-    .main-banner .picsum-img-wrapper img {
-      width: 100%; }
-  .main-banner .navigator-banner {
-    position: absolute;
-    right: 0;
-    height: 150px;
-    width: 50px;
-    background: #d3d3d3;
-    top: 35%;
-    z-index: 5; }
-    .main-banner .navigator-banner .carousel-control-prev, .main-banner .navigator-banner .carousel-control-next {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      opacity: 9;
-      position: static;
-      width: 100%;
-      height: 50px; }
-    .main-banner .navigator-banner .carousel-control-prev {
-      transform: rotate(-90deg); }
-    .main-banner .navigator-banner .carousel-control-next {
-      transform: rotate(90deg); }
-    .main-banner .navigator-banner .picsum-img-wrapper {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%; }
-  .main-banner .num {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid #787878;
-    border-bottom: 1px solid #787878;
-    height: 50px; }
-  .main-banner .bg-banner {
-    position: absolute; }
-  .main-banner .carousel {
-    z-index: 1; }
-  .main-banner .container {
-    position: relative;
-    height: 550px;
-    overflow: hidden; }
-  .main-banner .carousel-item .carousel-caption {
-    top: 80%;
-    left: -100%;
-    z-index: 10;
-    color: #fff;
+.main-banner .carousel-indicators {
+  width: 100px;
+  left: 0px;
+  margin: 0px; }
+  .main-banner .carousel-indicators li {
+    border: none;
+    background: #9a9a9a; }
+    .main-banner .carousel-indicators li.active {
+      background: #da5004; }
+
+.main-banner .carousel-caption {
+  background: #fff;
+  padding: 15px;
+  width: 300px;
+  right: 70px;
+  left: auto; }
+  .main-banner .carousel-caption h3 {
+    color: #000;
     text-align: left;
-    width: 600px;
-    transform: translateY(-50%);
-    transition: all 1s;
-    opacity: 0;
-    background: #e7430a;
-    padding: 5px 15px;
-    height: 100px; }
-    .main-banner .carousel-item .carousel-caption h1 {
-      color: #fff;
-      text-transform: uppercase;
-      font-weight: bold;
-      margin: 0; }
-    .main-banner .carousel-item .carousel-caption h3 {
-      width: 98%;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      margin: 0px; }
-    .main-banner .carousel-item .carousel-caption .btn {
-      border: 2px solid #fff;
-      margin-right: 15px;
-      margin-top: 50px; }
-    .main-banner .carousel-item .carousel-caption h3 {
-      color: #fff; }
-  .main-banner .carousel-item .info-img {
-    position: absolute;
-    left: -100%;
-    top: 40%;
-    transform: translateY(-55%);
-    z-index: 1;
-    transition: all 1s;
-    opacity: 0; }
-    .main-banner .carousel-item .info-img img {
-      width: 60%; }
-  .main-banner .carousel-item.active .carousel-caption {
-    left: 15px;
-    opacity: .9; }
-  .main-banner .carousel-item.active .info-img {
-    left: 15%;
-    opacity: .9; }
+    margin: 0px; }
 
-.services-info:first-child {
-  border-bottom: 1px solid #ccc; }
+.footer {
+  border-top: 5px solid #000;
+  padding: 25px 0 0;
+  margin-top: 40px; }
+  .footer .footer-li li {
+    border-bottom: 1px solid #f3f3f3;
+    padding: 10px 0; }
+    .footer .footer-li li a {
+      color: #593a00; }
 
-.services-info i {
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .services-info i svg {
-    fill: #217f2c; }
-
-.services-info p {
-  font-size: 28px;
-  text-align: center;
-  font-weight: 300; }
-
-.services-info .col {
-  padding: 15px; }
-  .services-info .col:nth-child(2) {
-    border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc; }
+.copyright {
+  background: #333333;
+  color: #fff; }
+  .copyright p {
+    margin: 0;
+    padding: 15px 0; }
 
 @media (max-width: 576px) {
   .col {
