--- a/bw/scss/main.scss
+++ b/bw/scss/main.scss
@@ -47,46 +47,82 @@ svg:not(:root) {
 }
 
 h1{
-	color:#e7430a;
-	margin-bottom:50px;
+	color:#000; 
+	margin:50px 0; 
 }
-.service-view{
-	.card{
-		border-radius: 10px;
-		overflow: hidden;
+ul{
+	padding:0px;
+}
+
+li{
+	list-style-type: none; 
+}
+
+.bw-header{ 
+	display:flex;
+	align-items: center;
+	justify-content: space-between; 
+	padding:10px 0;
+	.logo { 
+		img 
+		{width:50%;}  
 	}
-	.card-body{
+}
+.navbar-inverse{
+	background:#da5004;
+	border:none;
+	margin:0; 
+	.navbar-nav{
+		float: none;
+		display: table;
+		margin: 0 auto;
+		li{
+			a{
+				color:#fff; 
+				text-shadow: none;
+			}
+		}
+	}
+}
+
+.lable-strip{
+	background:#da5004;
+	h5{  
+		color:#fff;
+		font-weight:bold;
+		text-align:center;
+	}
+}
+
+.services-info{
+	margin:50px 0;
+	.circle{
+		overflow:hidden;
+		border-radius:50%; 
+	}
+	.title-heading { 
+		text-align:center;
+		font-size:30px; 
+		font-weight: bold; 
+	}
+}
+
+.our-achiememnts{
+	img{
+		width:100%;
+	}
+	.col{
+		background:#f8f7f7;
+		margin:0px; 
 		padding:0px;
-		.card-title, .card-text{
-			padding:15px;
+		&:nth-child(2), &:nth-child(4),&:nth-child(6){ 
+			border-left:5px solid #e7430a;
+			padding:25px;
 		}
-		.card-title{
-			border-top:5px solid #e7430a;
-			text-align:center;
-			font-size:28px;
-			margin-bottom:0px;
-			background: #fafafa;;
-		}
+
 	}
 }
-.wt-mg-section{
-	background:#f7f7f7;
-}
-.wt-mg {
-	.heading{
-		display: block;
-		font-weight: bold;
-		font-size:37px;
-		margin-bottom:15px;
-		line-height: 40px;
-	}
-	
-	img {
-		width: auto;
-		margin-left: 20px;
-		margin-bottom:20px;
-	}
-}
+
 
 ul.list {
 	margin-top: 35px;
@@ -148,160 +184,58 @@ ul.list {
 }
 
 .main-banner {
-	border-top:5px solid #e7430a;
-	.picsum-img-wrapper {
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		img{
-		width:100%;}}
-	.navigator-banner{
-		position: absolute;;
-		right:0;
-		height:150px;
-		width:50px;
-		background:#d3d3d3;
-		top:35%;
-		z-index: 5;
-		.carousel-control-prev, .carousel-control-next{
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			opacity: 9;
-			position: static;
-			width: 100%;
-			height: 50px;
-		}
-		.carousel-control-prev{
-			transform: rotate(-90deg);
-		}
-		.carousel-control-next{
-			transform: rotate(90deg);
-		}
-		.picsum-img-wrapper {
-			position: absolute;
-			top: 0;
-			left: 0;
-			height: 100%;
-			width: 100%;
-		}
-	}
-	.num{
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		border-top:1px solid #787878;
-		border-bottom:1px solid #787878;
-		height:50px;
-	}
-	.bg-banner {
-		position: absolute;
-	}
 
-	.carousel {
-		z-index: 1;
+	.carousel-indicators{
+		width:100px; 
+		left:0px;  
+		margin:0px;
+		li{
+			border:none;
+			background:#9a9a9a;
+			&.active{
+				background:#da5004;
+			}
+		}
 	}
-
-	.container {
-		position: relative;
-		height: 550px;
-		overflow: hidden;
-	}
-
-	.carousel-item {
-		.carousel-caption {
-			top: 80%;
-			left: -100%;
-			z-index: 10;
-			color: #fff;
+	.carousel-caption{
+		background:#fff;
+			padding:15px;  
+			width:300px;
+			right: 70px;
+			left: auto;
+		
+		h3{
+			color:#000;
 			text-align: left;
-			width: 600px;
-			transform: translateY(-50%);
-			transition: all 1s;
-			opacity: 0;
-			background: #e7430a;
-			padding: 5px 15px;
-			height: 100px;
-
-			h1 {
-				color: #fff;
-				text-transform: uppercase;
-				font-weight: bold;
-				margin: 0;
-			}
-
-			h3 {
-				width: 98%;
-				white-space: nowrap;
-				overflow: hidden;
-				text-overflow: ellipsis;
-				margin: 0px;
-			}
-
-			.btn {
-				border: 2px solid #fff;
-				margin-right: 15px;
-				margin-top: 50px;
-			}
-
-			h3 {
-				color: #fff;
-			}
+			margin:0px;
 		}
+	}
+}
 
-		.info-img {
-			position: absolute;
-			left: -100%;
-			top: 40%;
-			transform: translateY(-55%);
-			z-index: 1;
-			transition: all 1s;
-			opacity: 0;
-			img{
-				width:60%;
-			}
-		}
-
-		&.active {
-			.carousel-caption {
-				left: 15px;
-				opacity: .9;
-			}
-
-			.info-img {
-				left: 15%;
-				opacity: .9;
+.footer{
+	border-top:5px solid #000; 
+	padding:25px 0 0; 
+	margin-top: 40px;
+	.footer-li{
+		li{
+			border-bottom:1px solid #f3f3f3;
+			padding:10px 0;
+			a{
+				color:#593a00;
 			}
 		}
 	}
 }
-.services-info{
-	&:first-child{
-		border-bottom:1px solid #ccc;
-	}
-	i{
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		svg{
-			fill:#217f2c;
-		}
-	}
+
+.copyright{
+	background:#333333; 
+	color:#fff;	  
 	p{
-		font-size:28px;
-		text-align: center;
-		font-weight: 300;
-	}
-	.col{
-		padding:15px;
-		&:nth-child(2){
-			border-left:1px solid #ccc;
-			border-right:1px solid #ccc;
-		}
-	}
+		margin:0;
+		padding:15px 0;
+	} 
 }
+
 
 
 @media (max-width: 576px) {
@@ -364,7 +298,7 @@ ul.list {
 }
 .homeSlide{
 	height:auto !important; 
-}
+} 
 .img-width{
 	width:100%;
 }
