--- a/bw/css/main.css
+++ b/bw/css/main.css
@@ -1,6 +1,7 @@
 body {
   color: #333333;
-  text-shadow: none !important; }
+  text-shadow: none !important;
+  font-family: 'Roboto', sans-serif; }
 
 svg {
   vertical-align: middle;
@@ -30,6 +31,16 @@ svg:not(:root) {
   width: 12px;
   height: 12px; }
 
+.v-align {
+  display: flex;
+  align-items: center; }
+
+.d-flex {
+  display: flex; }
+
+.btn {
+  border-radius: 0px; }
+
 .btn-primary {
   background: #e7430a;
   border: none !important; }
@@ -52,7 +63,10 @@ li {
   justify-content: space-between;
   padding: 10px 0; }
   .bw-header .logo img {
-    width: 50%; }
+    width: 100%; }
+  .bw-header h2 {
+    text-transform: uppercase;
+    margin: 0px; }
 
 .navbar-inverse {
   background: #da5004;
@@ -64,11 +78,12 @@ li {
     margin: 0 auto; }
     .navbar-inverse .navbar-nav li a {
       color: #fff;
-      text-shadow: none; }
+      text-shadow: none;
+      text-transform: uppercase; }
 
 .lable-strip {
   background: #da5004; }
-  .lable-strip h5 {
+  .lable-strip h2 {
     color: #fff;
     font-weight: bold;
     text-align: center;
@@ -76,24 +91,24 @@ li {
     padding: 18px 0px;
     position: relative;
     margin: 0 50px; }
-  .lable-strip .triangle-left {
-    width: 0;
-    height: 0;
-    border-top: 25px solid transparent;
-    border-right: 25px solid #333333;
-    border-bottom: 25px solid transparent;
-    position: absolute;
-    left: -25px;
-    top: 0px; }
-  .lable-strip .triangle-right {
-    width: 0;
-    height: 0;
-    border-top: 25px solid transparent;
-    border-left: 25px solid #333333;
-    border-bottom: 25px solid transparent;
-    position: absolute;
-    right: -25px;
-    top: 0px; }
+    .lable-strip h2 .triangle-left {
+      width: 0;
+      height: 0;
+      border-top: 34px solid transparent;
+      border-right: 25px solid #333333;
+      border-bottom: 34px solid transparent;
+      position: absolute;
+      left: -25px;
+      top: 0px; }
+    .lable-strip h2 .triangle-right {
+      width: 0;
+      height: 0;
+      border-top: 34px solid transparent;
+      border-left: 25px solid #333333;
+      border-bottom: 34px solid transparent;
+      position: absolute;
+      right: -25px;
+      top: 0px; }
 
 .services-info {
   margin: 50px 0; }
@@ -121,7 +136,9 @@ li {
       padding: 25px; }
 
 .g-o {
-  margin-bottom: 25px; }
+  margin-top: 50px;
+  padding: 30px 0 60px;
+  background: #f8f7f7; }
 
 .c-o img {
   width: 100%; }
@@ -212,6 +229,8 @@ ul.list {
 .footer {
   border-top: 5px solid #000;
   padding: 25px 0 0; }
+  .footer h3 {
+    color: #000; }
   .footer svg {
     fill: #e7430a; }
   .footer .footer-li li {
@@ -237,6 +256,8 @@ ul.list {
     flex-basis: revert; }
   .wt-mg img {
     width: 100%; }
+  .d-flex, .v-align {
+    display: block; }
   #myCarousel {
     display: none; }
   .picsum-img-wrapper img {
