--- a/bw/css/main.css
+++ b/bw/css/main.css
@@ -247,8 +247,15 @@ ul.list {
     padding: 15px 0; }
 
 @media (max-width: 576px) {
+  .navbar-inverse {
+    background: #333333; }
   .services-info .circle {
     margin: 0 auto; }
+  .lable-strip h2 {
+    font-size: 12px; }
+    .lable-strip h2 .triangle-left, .lable-strip h2 .triangle-right {
+      border-top: 24px solid transparent;
+      border-bottom: 24px solid transparent; }
   .our-achiememnts {
     display: block; }
   .col {
@@ -258,6 +265,10 @@ ul.list {
     width: 100%; }
   .d-flex, .v-align {
     display: block; }
+  .footer .d-flex {
+    display: table;
+    margin: 0 auto;
+    text-align: center; }
   #myCarousel {
     display: none; }
   .picsum-img-wrapper img {
