--- a/mtj/scss/main.scss
+++ b/mtj/scss/main.scss
@@ -2,6 +2,7 @@ body {
 	color:#333333;
 	text-shadow: none !important;
 	font-family: 'Roboto', sans-serif;
+	background:#fff;
 }
 
 svg {
@@ -13,6 +14,9 @@ img{
 	width:100%;
 }
  
+.mt-0{
+margin:0px; 
+}
 svg:not(:root) {
 	overflow: hidden;
 }
@@ -51,21 +55,18 @@ svg:not(:root) {
 }
 
 .btn{
-	border-radius:0px;
+	border-radius:3px; 
+	text-transform: capitalize;
 }
 
 .btn-primary{
-	background:#e7430a;
-	border:none !important;
+	background:#772ab3;
+	border:none !important;  
 	&:hover{
-		background:#ce3a07;
+		background:#570596;
 	}
 }
 
-h1{
-	color:#000; 
-	margin:50px 0; 
-}
 ul{
 	padding:0px;
 }
@@ -83,10 +84,13 @@ li{
 	.logo { 
 		position: absolute;
 		left:0px;
-		top:0px;
-		height: 62px;
+		top:10px;
+		height: auto;
     	overflow: hidden;
-    	padding: 9px;
+		padding: 9px;
+		z-index: 1;
+		background:#fff;
+		box-shadow: 1px 0px 5px rgba(0,0,0,0.50); 
 		img 
 		{width:100%;} 	
 	}
@@ -99,6 +103,8 @@ li{
 	background:none;
 	border:none;
 	margin:0; 
+	display: flex;
+    align-items: center;
 	.navbar-nav{
 		float: none;
 		display: table;
@@ -108,9 +114,94 @@ li{
 				color:#212121; 
 				text-shadow: none;
 				text-transform: uppercase;
+				padding: 5px 10px; 
+				margin:0 3px;
+				border-radius: 3px;
+				font-weight: bold; 
+				&:focus, &:hover{
+					background-color:#d9ede4;
+					color:#212121;  
+				}
+			}
+			&.active{
+				a{
+					background-color: #056839;
+					color:#fff; 
+				}
 			}
 		}
 	}
+}
+
+.bread-crum{
+	margin-top:50px;
+}
+
+.about-us{
+	margin:50px 0px; 
+	
+}
+.section-02{
+	background:#f2f3f4; 
+	.card{
+		border:2px solid #9359c1; 
+		text-align: center;
+		padding:15px;
+		p{
+			font-weight: bold;
+			color:#9359c1;
+		}
+	}
+	img{
+		height:480px; 
+	}
+}
+
+.section-03{
+	margin:40px 0px 25px;
+	.endo-info{
+		padding:15px;
+		background:#17995b;
+		color:#fff;
+	}
+}
+
+#myCarousel-1{
+	height:350px;
+	.quotes{
+		font-size:50px;
+		color:#000; 
+	}
+	.testimonial{
+		.testimonial-img{
+			p{
+				display: flex;
+    			align-items: center;
+			}
+		img{
+			width:50px; 
+			height:50px;
+			border-radius: 50%;
+			overflow: hidden;
+			margin-right: 15px;
+		}
+		}
+	}
+	.carousel-indicators{
+		li{
+			border-color:#17995b;
+			&.active{
+				background-color: #17995b;
+			}
+		}
+	}
+}
+
+
+#navbar .btn{ 
+	position: absolute; 
+	right: 0;
+	top: 8px;
 }
 
 .lable-strip{
@@ -284,65 +375,62 @@ ul.list {
 	}
 	
 	.carousel-caption{
-		background:#fff;
 			padding:15px;  
-			width:300px;
-			right: 70px;
-			left: auto;
-			transform: skew(-30deg);
+			width:40%;  
+			left: 70px;
+			text-align:left;
+			top: 50%;
+    		margin-top: -15%;
+				h1{
+					color:#fff;
+					font-weight:bold; 
+					margin:0 0 15px;
+				}
+				h3{
+					color:#EEEF3A;
+					font-weight:bold;
+				}
 		
-		h3{
-			color:#000;
-			text-align: left;
-			margin:0px 0 0 30px;
-			transform: skew(30deg);
-		}
-		span{
-			position:absolute;
-			width:15px;
-			height:100%;
-			background:#fff;
-			top:0;
-			left:-25px;
-		}
 	}
 }
 
 .footer{
-	border-top:5px solid #000; 
-	padding:25px 0 0; 
-	h3{ 
-		color:#000;
+	background:#3f2255;  
+	padding:25px 0 0;
+	.btn{
+		border:1px solid #fff !important; 
+	} 
+	h4, p{   
+		color:#fff; 
 	}
 	svg{
-		fill: #e7430a;   
+		fill: #fff;    
+	} 
+	.social-media{
+		margin-top:20px; 
+	}
+	.address{
+		margin-top:20px;
 	}
 	.footer-logo{ 
+		
 		img{
-			width:50%;  
+			background: #fff;
+    		padding: 10px;
+			width:40%;  
 		}
 	}
 	.footer-li{
 		li{
-			border-bottom:1px solid #f3f3f3;
 			padding:10px 0;
+			list-style: disc inside;
+			color:#fff;
 			a{
-				color:#593a00;
+				color:#fff;
 			}
 		}
 	}
-}
-
-.copyright{
-	background:#333333; 
-	color:#fff;	  
-	p{
-		margin:0;
-		padding:15px 0;
-	} 
-}
-
-
+} 
 
 @media (max-width: 576px) {
 	.navbar-inverse{
